--- a/rocaN.css
+++ b/rocaN.css
@@ -166,6 +166,7 @@ body
     cursor: pointer;
     position: fixed;
     overflow: hidden;
+    z-index: 99999999;
     border-radius: 50%;
     background-size: 25px;
     border: 2px solid #292929;
@@ -490,7 +491,7 @@ span.need-name:before
     border-top: 2px #fff solid;
     border-right: 2px #fff solid;
     border-radius: 4px 4px 0px 0px;
-    z-index: 9999;
+    z-index: 8;
     animation: span_anim 1s infinite;
 }
 
