--- a/rocaN.css
+++ b/rocaN.css
@@ -16,6 +16,7 @@ body
     border: 0;
     padding: 0;
     background-color: #1f1f1f;
+    background-image: url("img/web-stuff/bg_blank.jpg");
 }
 /* ••• Default settings END ••• */
 
@@ -166,7 +167,6 @@ body
     cursor: pointer;
     position: fixed;
     overflow: hidden;
-    z-index: 99999999;
     border-radius: 50%;
     background-size: 25px;
     border: 2px solid #292929;
@@ -217,6 +217,152 @@ body
 }
 
 /* ••• Root END ••• */
+
+/* ••• Loader Section ••• */
+
+section.loader
+{
+    width: 100%;
+    height: 100%;
+    position: fixed;
+    background-color: #0c0c0c;
+    z-index: 9999999;
+}
+
+section.loader>.loader-book
+{
+    width: 250px;
+    height: 130px;
+    position: relative;
+    border-radius: 4px;
+    border: 2px solid #fff;
+    transform-style: preserve-3d;
+    transform: rotateX(15deg);
+    top: calc(50% - (130px / 2) - 1px);
+    left: calc(50% - (250px / 2) - 1px);
+    background: linear-gradient(90deg, #464646 50%, #464646 0%, #2b2b2b 51% , #2b2b2b 100%);
+}
+
+
+section.loader>.loader-book>.loader-book-midle-line
+{
+    width: 2px;
+    height: 100%;
+    position: absolute;
+    left: calc(50% - (1px / 2));
+    animation: loader-book-r 4s infinite;
+    -o-animation: loader-book-r 4s infinite;
+    -webkit-animation: loader-book-r 4s infinite;
+    animation-timing-function: linear;
+}
+
+
+section.loader>.loader-book>.loader-book-midle-line>div
+{
+    margin: 0;
+    top: -2px;
+    width: 125px;
+    height: 130px;
+    position: absolute;
+    border: 2px solid #b1b1b1;
+    border-left: none;
+    background-color: #2b2b2b;
+    border-top-right-radius: 4px;
+    border-bottom-right-radius: 4px;
+    animation: loader-book-c 4s infinite;
+    -o-animation: loader-book-c 4s infinite;
+    -webkit-animation: loader-book-c 4s infinite;
+    animation-timing-function: linear;
+}
+
+section.loader>.loader-book>.loader-book-midle-line:nth-child(2)
+{
+    animation-delay: 0.5s;
+}
+
+section.loader>.loader-book>.loader-book-midle-line:nth-child(2)>div
+{
+    animation-delay: 0.5s;
+}
+
+section.loader>.loader-book>.loader-book-midle-line:nth-child(3)
+{
+    animation-delay: 1s;
+}
+
+section.loader>.loader-book>.loader-book-midle-line:nth-child(3)>div
+{
+    animation-delay: 1s;
+}
+
+@keyframes loader-book-c
+{
+    0%
+    {
+        background-color: #2b2b2b;
+        border: 2px solid #b1b1b1;
+        border-left: none; 
+    }
+
+    50%,100%
+    {
+        background-color: #464646;
+        border: 2px solid #fff;
+        border-left: none;
+    }
+}
+
+@keyframes loader-book-r
+{
+    0%
+    {
+        transform: rotateY(0deg); 
+    }
+
+    50%,100%
+    {
+        transform: rotateY(-180deg);
+    }
+}
+
+.loader-text
+{
+    top: 65%;
+    color: #fff;
+    display: flex;
+    font-size: 24px;
+    position: absolute;
+    text-align: center;
+    font-family: monospace;
+    text-transform: uppercase;
+    left: calc(50% - (92px / 2));
+}
+
+.loader-text:after
+{
+    content: ".";
+    display: block;
+    position: relative;
+    -webkit-animation: Dots 2s cubic-bezier(0, .39, 1, .68) infinite;
+    animation: Dots 2s cubic-bezier(0, .39, 1, .68) infinite;
+}
+
+@keyframes Dots {
+  0% {
+    content: "";
+  }
+  33% {
+    content: ".";
+  }
+  66% {
+    content: "..";
+  }
+  100% {
+    content: "...";
+  }
+}
+
+/* ••• Loader Section END ••• */
 
 /* ••• Header ••• */
 
@@ -491,7 +637,7 @@ span.need-name:before
     border-top: 2px #fff solid;
     border-right: 2px #fff solid;
     border-radius: 4px 4px 0px 0px;
-    z-index: 8;
+    z-index: 9999;
     animation: span_anim 1s infinite;
 }
 
